# .xmonad

./: .gitignore  README.md  argparse  build  cabal.project  colorsys  stack.yaml  wallpaper  xmonad-config.cabal  xmonad.hs
scripts/: chromium-app.sh  rofi-nerdfont.sh  rofi-power-menu.sh  rofi-unicode.sh  rofi-wifi-menu.sh  screenshot.sh  screenshotflame.sh  screenshotfull.sh  set-brightness.sh  set-volume.sh  xbasket.sh  xmonad_keys.sh
xpm/: floats.xpm  floats_16.xpm  grid.xpm  grid_16.xpm  tall.xpm  tall_16.xpm
