name:               xmonad-config
version:            1.0.3
homepage:           https://www.github.com/Vonr/.xmonad
category:           System
license:            UNLICENSE
license-file:       UNLICENSE
author:             Vonr
maintainer:         Vonr
bug-reports:        https://www.github.com/Vonr/.xmonad/issues
cabal-version:      >= 1.10
build-type:         Simple

source-repository head
  type:      git
  location:  git://www.github.com/Vonr/.xmonad.git
  branch:    master

library
    default-language: Haskell2010

    ghc-options: -funbox-strict-fields -Wall -fno-warn-unused-do-bind

    build-depends:
                  xmonad >= 0.17.0,
                  xmonad-contrib >= 0.17.0,
                  base

    if impl(ghc < 8.0.2)
       -- Disable building with GHC before 8.0.2.
       -- Due to a cabal bug, do not use buildable: False,
       -- but instead give it an impossible constraint.
       -- See: https://github.com/haskell-infra/hackage-trustees/issues/165
       build-depends: unsupported-ghc-version > 1 && < 1

executable xmobar
    default-language:   Haskell2010
    main-is:            xmonad.hs
    build-depends:      xmonad,
                        xmonad-contrib,
                        base

    ghc-options: -funbox-strict-fields -Wall -fno-warn-unused-do-bind

